<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MercAPPdillos</string>
    <string name="action_settings">Settings</string>
    <string name="texto_email"><u></u></string>
  
     <!--- Botones de Menú Info General -->
    <string name="btn_mapa">MAPA</string>
    <string name="btn_info">INFO</string>
    <string name="btn_listado">LISTADO</string>
    <string name="btn_realidad">RADAR</string>
  
     <!--- Botón Información de Info General -->
    <string name="btn_informacion">Información</string>
    <string name="insertarNombre">Nombre del lugar:</string>
       
     <!--- Botón OK de Alert Dialogs -->
    <string name="btn_ok_alert">OK</string>
    
    <!--- Botones Marcadores Mapa click -->
    <string name="btn_masInfo_marker">+ Información</string>
    <string name="btn_comoLlegar">¿Cómo llegar?</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    
    <!--- CheckBox de Servicios-Settings-Mapa-Realidad-->
    <string name="ckmercadillo1">Antigüedades</string>
    <string name="ckmercadillo2">Coleccionismo</string>
    <string name="ckmercadillo3">Generalista</string>
    <string name="ckmercadillo4">Artesanía</string>
    <string name="ckmercadillo5">Navideño</string>
    <string name="ckmercadillo6">Ecológico</string>
    <string name="ckmercadillo7">Otros</string>
    <string name="ckmercadillo8">Segunda Mano</string>
    <string name="ckSettingsradio">Radio de Visión (km)</string>
    <string name="ckSettings1">Mapa</string>
    <string name="ckSettings2">Satélite</string>
    <string name="ckSettings3">Terreno</string>
    <string name="btn_borraralerta">Borrar Alerta</string>
    <string name="ckalerta">Mi Alerta</string>
   
    <!--- Textos Realidad Aumentada - Radio-Radar-->
    <string name="radiodevision">Ajustar radio de visión (km)</string>
    <string name="tabAjustes">AJUSTES</string>
    <string name="tabRecursos">MERCADOS</string>
    <string name="radar">RADAR</string>
    <string name="tvNombreText">Nombre:</string>
    <string name="tvDescripcionText">Descripción:</string>
    <string name="tvEnlaceText">+ INFO</string>
    <string name="tvMunicipiosText">Municipio:</string>
    <string name="tvTransporteText">Transporte:</string>
    <string name="tvDiaText">Día:</string>
    <string name="tvHorarioText">Horario:</string>
    <string name="tvDistanciaText">Distancia:</string>
    <string name="tvLlegar">¿Cómo llegar?</string>
    <string name="tvWiki">Link Wikilocs</string>
    <string name="cbguia">Activar Guía</string>
    <string name="tvstatus">Sin datos</string>
    <string name="ckSettingsRA1">Radio de Visión (km)</string>
    <string name="ckSettingsRA2">Captura de Pantalla</string>
    
     <!---Textos Info App-->
    <string name="tvInfoApp">Esta aplicación ha sido desarrollada para que todos los usuarios puedan disponer de información actualizada de todos los mercadillos de la Comunidad de Madrid. \n\nEn principio sólo está disponible la información de esta Comunidad, pero el objetivo es que todos los mercadillos del país estén incluidos en esta App, haciendo uso de las nuevas tecnologías como la realidad aumentada y el geoposicionamiento, para poder obtener información referente a estos mercadillos que no hacen la vida más fácil. \n\nEs tiempo de crisis, y es por eso que los mercadillos nos ofrecen fórmulas económicas para adaptarnos a estos tiempos que nos han tocado vivir. \n\nEsta app ha sido desarrollada de forma grauita y desinteresada por MCO Geosolutions”(<a href="http://www.mcogeo.com/">http://www.mcogeo.com/</a>)
</string>
    
</resources>
