<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/VentanaEmergente"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#AA000000"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/checkanti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo1"
                        android:textColor="#fff" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checkcolecc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo2"
                        android:textColor="#fff" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checkgene"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo3"
                        android:textColor="#fff" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checkarte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo4"
                        android:textColor="#fff" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checknavi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo5"
                        android:textColor="#fff" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checkeco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo6"
                        android:textColor="#fff" />
                    
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checksegunda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo8"
                        android:textColor="#fff" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <CheckBox
                        android:id="@+id/checkotros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ckmercadillo7"
                        android:textColor="#fff" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_barramenu"
                android:text="@string/btnAceptar"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/boton_barramenu"
                android:text="@string/btnCancelar"
                android:textColor="#fff" />
        </TableRow>
    </LinearLayout>

</LinearLayout>