<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/VentanaEmergente"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#AA000000"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RadioGroup
                        android:id="@+id/rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/rmapa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ckSettings1"
                            android:textColor="#fff" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/moradomapa" />

                        <RadioButton
                            android:id="@+id/rsatelite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ckSettings2"
                            android:textColor="#fff" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/moradomapa" />

                        <RadioButton
                            android:id="@+id/rterreno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ckSettings3"
                            android:textColor="#fff" />
                    </RadioGroup>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <CheckBox
                            android:id="@+id/checkalerta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/ckalerta"
                            android:textColor="#fff" />

                        <Button
                            android:id="@+id/btnborraralert"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="3dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/boton_barramenu"
                            android:padding="5dp"
                            android:text="@string/btn_borraralerta"
                            android:textColor="#fff"
                            android:textColorHint="#fff"
                            android:textSize="@dimen/textobtnsettings" />
                    </TableRow>
                    
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/moradomapa" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_barramenu"
                android:text="@string/btnAceptar"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/boton_barramenu"
                android:text="@string/btnCancelar"
                android:textColor="#fff" />
        </TableRow>
    </LinearLayout>

</LinearLayout>