<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog_detalle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#AA000000"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/trNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tvNombreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvNombreText"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:textColor="#fff" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/moradomapa" />

            <TableRow
                android:id="@+id/trDistancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDistanciaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvDistanciaText"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDistancia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:maxLength="6"
                    android:padding="5dp"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="Kms"
                    android:textColor="#fff" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/moradomapa" />

            <TableRow
                android:id="@+id/trMunicipios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvMunicipiosText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvMunicipiosText"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMunicipios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:textColor="#fff" />
            </TableRow>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/moradomapa" />
            
            <TableRow
                android:id="@+id/trDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDiaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvDiaText"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:textColor="#fff" />
            </TableRow>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/moradomapa" />

            <TableRow
                android:id="@+id/trHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvHorarioText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvHorarioText"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:textColor="#fff" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/moradomapa" />
            
            <TableRow
                android:id="@+id/trTransporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvTransporteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvTransporteText"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTransporte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:textColor="#fff" />
            </TableRow>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/moradomapa" />            
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/trEnlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvLlegar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_info_info_textoalert"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/tvLlegar"
                android:textColor="#33b5e5" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/boton_barramenu"
                android:text="@string/btn_ok_alert"
                android:textColor="#fff" />
        </TableRow>
    </LinearLayout>

</LinearLayout>